[package]
name = "lsm_pg_extension"
version = "0.1.0"
edition = "2021"
description = "PostgreSQL extension for S3-native vector storage using LSM-trees"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pgrx_embed_lsm_pg_extension"
path = "src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[dependencies]
pgrx = "=0.12.9"
lsm_engine = { path = "../lsm_engine" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
object_store = { version = "0.11", features = ["aws"] }
parking_lot = "0.12"
once_cell = "1"
rand = "0.9"
serde_cbor = "0.11"
futures = "0.3"

[dev-dependencies]
pgrx-tests = "=0.12.9"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
